<resources>
    <string name="app_name" translatable="false">Coinnection</string>
    <string name="app_version">App Version:</string>
    <string name="app_email" translatable="false">coinnection.app@gmail.com</string>
    <string name="email_subject" translatable="false">Coinnection Feedback</string>
    <string name="email_device_info" translatable="false">"Device Info:\nOS Version: %s(%s)\nOS API Level: %d\nDevice: %s\nModel (and Product): %s (%s)\n\nMessage:\n\n"</string>
    <string name="initializing_text">Initializing app for the first time&#8230;</string>
    <string name="initial_load_network_error_text">Network Error, please close app and reopen when you have an internet connection.</string>
    <string name="title_portfolio">Portfolio</string>
    <string name="title_all_assets">All Assets</string>
    <string name="title_asset_pair_list">Asset Pairs</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="title_donate">Donate</string>
    <string name="title_licenses">Licenses</string>
    <string name="title_force_update">Force Update?</string>
    <string name="title_remove_portfolio_asset">Remove Asset</string>
    <string name="title_remove_asset_pair">Remove Asset Pair</string>
    <string name="title_widget_asset_picker">Choose asset pair:</string>
    <string name="symbol_dash" translatable="false">&#8212;</string>
    <string name="search_hint">Search assets&#8230;</string>
    <string name="nav_option_portfolio">Portfolio</string>
    <string name="nav_option_settings">Settings</string>
    <string name="nav_option_about">About</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_search">Search</string>
    <string name="add">Add</string>
    <string name="add_balance">Add Balance</string>
    <string name="edit">Edit</string>
    <string name="edit_balance">Edit Balance</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="copy">Copy</string>
    <string name="email">Email</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="donate">Donate</string>
    <string name="okay">Okay</string>
    <string name="rank_header">Rank</string>
    <string name="available_supply_header">Available Supply</string>
    <string name="total_supply_header">Total Supply</string>
    <string name="max_supply_header">Max Supply</string>
    <string name="global_market_cap_header">Global Market Cap:</string>
    <string name="market_value_header">Market Value</string>
    <string name="amount_header">Amount</string>
    <string name="total_balance_header">Total Balance</string>
    <string name="name_header">Name</string>
    <string name="price_header">Price</string>
    <string name="navigation_header">Navigation</string>
    <string name="market_cap_header">Market Cap</string>
    <string name="percent_change_header">Percent Change</string>
    <string name="volume_twenty_four_hour_header">24h Volume</string>
    <string name="last_updated_label">Last Updated:</string>
    <string name="percent_change_1h_short">% Change 1H</string>
    <string name="percent_change_24h_short">% Change 24H</string>
    <string name="percent_change_7d_short">% Change 7D</string>
    <string name="one_hour_change_text">Past Hour</string>
    <string name="one_day_change_text">Past Day</string>
    <string name="one_week_change_text">Past Week</string>
    <string name="one_hour_abbreviation_label">1h</string>
    <string name="twenty_four_hour_abbreviation_label">24h</string>
    <string name="seven_day_abbreviation_label">7d</string>
    <string name="asset_section_title">Assets</string>
    <string name="asset_section_empty_text">Add assets to your portfolio.  Get started by tapping on the search icon in the top right corner of the screen.</string>
    <string name="watchlist_section_title">Watchlist</string>
    <string name="watchlist_section_empty_text">Add assets to your watchlist.  Get started by tapping on the search icon in the top right corner of the screen.</string>
    <string name="balance_section_title">Balance</string>
    <string name="statistics_section_title">Information</string>
    <string name="currency_section_title">Fiat Currencies</string>
    <string name="asset_pair_list_empty_text">Add an asset pair.  Get started by tapping the add button below.</string>
    <string name="force_update_text">
        It is recommended to have a good data connection before starting an update.
    </string>
    <string name="remove_portfolio_asset_text">
        Are you sure you want to remove this asset from your portfolio?
    </string>
    <string name="remove_asset_pair_text">
        Are you sure you want to remove this asset pair?
    </string>
    <string name="donation_header_text">
        Donations are appreciated!\nTap an item to view in more detail
    </string>
    <string name="created_by_text">Created By Caleb Cordell</string>
    <string name="support_email_text">Support/feedback email</string>
    <string name="app_review_text">Rate this app</string>
    <string name="coin_market_cap_text">All data from CoinMarketCap.com</string>
    <string name="coin_market_cap_url" translatable="false">https://www.coinmarketcap.com</string>
    <string name="erc20_link_text">List of erc20 tokens</string>
    <string name="erc20_link_url" translatable="false">https://etherscan.io/tokens</string>
    <string name="pref_currency">Local Currency</string>
    <string name="pref_currency_summary">Select which currency should be used to display prices.</string>
    <string name="pref_currency_default" translatable="false">usd</string>
    <string name="currency_aud">AUD &#8211; $ Australia Dollar</string>
    <string name="currency_brl">BRL &#8211; $ Brazil Real</string>
    <string name="currency_cad">CAD &#8211; $ Canada Dollar</string>
    <string name="currency_chf">CHF &#8211; CHF Switzerland Franc</string>
    <string name="currency_clp">CLP &#8211; $ Chile Peso</string>
    <string name="currency_cny">CNY &#8211; ¥ China Yuan/Renminbi</string>
    <string name="currency_czk">CZK &#8211; Kč Czech Republic Koruna</string>
    <string name="currency_dkk">DKK &#8211; kr Denmark Krone</string>
    <string name="currency_eur">EUR &#8211; € Euro</string>
    <string name="currency_gbp">GBP &#8211; £ Great Britain Pound</string>
    <string name="currency_hkd">HKD &#8211; $ Hong Kong Dollar</string>
    <string name="currency_huf">HUF &#8211; Ft Hungary Forint</string>
    <string name="currency_idr">IDR &#8211; Rp Indonesia Rupiah</string>
    <string name="currency_ils">ILS &#8211; ₪ Israel Shekel</string>
    <string name="currency_inr">INR &#8211; ₹ India Rupee</string>
    <string name="currency_jpy">JPY &#8211; ¥ Japan Yen</string>
    <string name="currency_krw">KRW &#8211; ₩ South Korea Won</string>
    <string name="currency_mxn">MXN &#8211; $ Mexico Peso</string>
    <string name="currency_myr">MYR &#8211; RM Malaysia Ringgit</string>
    <string name="currency_nok">NOK &#8211; kr Norway Krone</string>
    <string name="currency_nzd">NZD &#8211; $ New Zealand Dollar</string>
    <string name="currency_php">PHP &#8211; ₱ Philippines Peso</string>
    <string name="currency_pkr">PKR &#8211; ₨ Pakistan Rupee</string>
    <string name="currency_pln">PLN &#8211; zł Poland Zloty</string>
    <string name="currency_rub">RUB &#8211; ₽ Russia Rouble</string>
    <string name="currency_sek">SEK &#8211; kr Sweden Krona</string>
    <string name="currency_sgd">SGD &#8211; $ Singapore Dollar</string>
    <string name="currency_thb">THB &#8211; ฿ Thailand Baht</string>
    <string name="currency_try">TRY &#8211; ₺ Turkey Lira</string>
    <string name="currency_twd">TWD &#8211; NT$ Taiwan New Dollar</string>
    <string name="currency_usd">USD &#8211; $ United States Dollar</string>
    <string name="currency_zar">ZAR &#8211; R South African Rand</string>
    <string name="currency_code_aud" translatable="false">AUD</string>
    <string name="currency_code_brl" translatable="false">BRL</string>
    <string name="currency_code_cad" translatable="false">CAD</string>
    <string name="currency_code_chf" translatable="false">CHF</string>
    <string name="currency_code_clp" translatable="false">CLP</string>
    <string name="currency_code_cny" translatable="false">CNY</string>
    <string name="currency_code_czk" translatable="false">CZK</string>
    <string name="currency_code_dkk" translatable="false">DKK</string>
    <string name="currency_code_eur" translatable="false">EUR</string>
    <string name="currency_code_gbp" translatable="false">GBP</string>
    <string name="currency_code_hkd" translatable="false">HKD</string>
    <string name="currency_code_huf" translatable="false">HUF</string>
    <string name="currency_code_idr" translatable="false">IDR</string>
    <string name="currency_code_ils" translatable="false">ILS</string>
    <string name="currency_code_inr" translatable="false">INR</string>
    <string name="currency_code_jpy" translatable="false">JPY</string>
    <string name="currency_code_krw" translatable="false">KRW</string>
    <string name="currency_code_mxn" translatable="false">MXN</string>
    <string name="currency_code_myr" translatable="false">MYR</string>
    <string name="currency_code_nok" translatable="false">NOK</string>
    <string name="currency_code_nzd" translatable="false">NZD</string>
    <string name="currency_code_php" translatable="false">PHP</string>
    <string name="currency_code_pkr" translatable="false">PKR</string>
    <string name="currency_code_pln" translatable="false">PLN</string>
    <string name="currency_code_rub" translatable="false">RUB</string>
    <string name="currency_code_sek" translatable="false">SEK</string>
    <string name="currency_code_sgd" translatable="false">SGD</string>
    <string name="currency_code_thb" translatable="false">THB</string>
    <string name="currency_code_try" translatable="false">TRY</string>
    <string name="currency_code_twd" translatable="false">TWD</string>
    <string name="currency_code_usd" translatable="false">USD</string>
    <string name="currency_code_zar" translatable="false">ZAR</string>
    <string name="currency_name_aud">Australia Dollar</string>
    <string name="currency_name_brl">Brazil Real</string>
    <string name="currency_name_cad">Canada Dollar</string>
    <string name="currency_name_chf">Switzerland Franc</string>
    <string name="currency_name_clp">Chile Peso</string>
    <string name="currency_name_cny">China Yuan/Renminbi</string>
    <string name="currency_name_czk">Czech Republic Koruna</string>
    <string name="currency_name_dkk">Denmark Krone</string>
    <string name="currency_name_eur">Euro</string>
    <string name="currency_name_gbp">Great Britain Pound</string>
    <string name="currency_name_hkd">Hong Kong Dollar</string>
    <string name="currency_name_huf">Hungary Forint</string>
    <string name="currency_name_idr">Indonesia Rupiah</string>
    <string name="currency_name_ils">Israel Shekel</string>
    <string name="currency_name_inr">India Rupee</string>
    <string name="currency_name_jpy">Japan Yen</string>
    <string name="currency_name_krw">South Korea Won</string>
    <string name="currency_name_mxn">Mexico Peso</string>
    <string name="currency_name_myr">Malaysia Ringgit</string>
    <string name="currency_name_nok">Norway Krone</string>
    <string name="currency_name_nzd">New Zealand Dollar</string>
    <string name="currency_name_php">Philippines Peso</string>
    <string name="currency_name_pkr">Pakistan Rupee</string>
    <string name="currency_name_pln">Poland Zloty</string>
    <string name="currency_name_rub">Russia Rouble</string>
    <string name="currency_name_sek">Sweden Krona</string>
    <string name="currency_name_sgd">Singapore Dollar</string>
    <string name="currency_name_thb">Thailand Baht</string>
</resources>