<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_portfolio"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/nav_option_portfolio" />

        <item
            android:id="@+id/nav_all_assets"
            android:icon="@drawable/ic_trending_up_black_24dp"
            android:title="@string/title_all_assets" />

        <item
            android:id="@+id/nav_asset_pairs"
            android:icon="@drawable/ic_done_black_24dp"
            android:title="@string/title_asset_pair_list" />
    </group>

    <group
        android:checkableBehavior="single"
        android:menuCategory="secondary">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_option_settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/nav_option_about" />
    </group>

</menu>
