<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="?cardStyle"
    app:cardCornerRadius="0dp"
    app:cardElevation="2dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/rank_label_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rank_header"
            android:textColor="?colorTextOverBackgroundSecondary"
            android:textSize="12sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/rank_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textColor="?colorTextOverBackgroundPrimary"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/rank_label_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/market_cap_label_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/market_cap_header"
            android:textColor="?colorTextOverBackgroundSecondary"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/rank_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/market_cap_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textColor="?colorTextOverBackgroundPrimary"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/market_cap_label_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/volume_24_hour_label_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/volume_twenty_four_hour_header"
            android:textColor="?colorTextOverBackgroundSecondary"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/market_cap_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/volume_24_hour_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textColor="?colorTextOverBackgroundPrimary"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/volume_24_hour_label_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/available_supply_label_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/available_supply_header"
            android:textColor="?colorTextOverBackgroundSecondary"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/volume_24_hour_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/available_supply_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textColor="?colorTextOverBackgroundPrimary"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/available_supply_label_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/total_supply_label_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/total_supply_header"
            android:textColor="?colorTextOverBackgroundSecondary"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/available_supply_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/total_supply_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textColor="?colorTextOverBackgroundPrimary"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/total_supply_label_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/max_supply_label_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/max_supply_header"
            android:textColor="?colorTextOverBackgroundSecondary"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/total_supply_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/max_supply_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textColor="?colorTextOverBackgroundPrimary"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/max_supply_label_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>